Implemets method updateLista and deleteItemLista
