# src/endpoints/deleteItemLista.ts
@@ -1,0 +1,5 @@
+import { Container } from "typedi";
+import { ListaController } from "../controllers/listaController";
+
+const controller = Container.get<ListaController>("listaController");
+exports.handler = controller.deleteItemLista.bind(controller);
